added dots container

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </div>
     <button class="slider__btn slider__btn--left">&larr;</button>
     <button class="slider__btn slider__btn--right">&rarr;</button>
+    <div class="dots"></div>
     <script src="script.js"></script>
   </body>
 </html>
