added a functionality to make one click on dot and move to  the corresponding page

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       <div class="slide">
         <img src="./asset/images/img-4.jpg" alt="" />
       </div>
+      <div class="dots"></div>
+      <button class="slider__btn slider__btn--left">&larr;</button>
+      <button class="slider__btn slider__btn--right">&rarr;</button>
     </div>
-    <button class="slider__btn slider__btn--left">&larr;</button>
-    <button class="slider__btn slider__btn--right">&rarr;</button>
     <script src="script.js"></script>
   </body>
 </html>
